--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,57 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navigation {
+  width:30%;
+  display: flex;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  font-family: sans-serif;
+  padding: 5%;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  
+  width: 35%;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  font-size: 50px;
+}
+
+img {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.app a {
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 1%;
+  background-color: red;
+  
 }
