--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,18 @@ img {
   background-color: red;
   
 }
+
+.forms-container {
+  display: flex;
+  flex-direction: column;
+}
+
+
+form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
